# numpymaxx

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: pattern_01_cumulative_sum.py  pattern_02_string_contains.py  pattern_03_conditional_column.py  pattern_04_matrix_multiply.py  pattern_05_pairwise_distance.py  pattern_06_group_normalization.py  pattern_07_date_parsing.py  pattern_08_rolling_average.py
examples/: example_slow.py
src/numpymaxx/: __init__.py  __main__.py  cli.py
tests/: test_corpus.py  test_real_world.py  test_unit.py
