[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numpymaxx"
version = "0.1.0"
description = "Single-shot LLM vectorizer for slow Pandas / NumPy code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ckibe-opt" }
]
keywords = ["pandas", "numpy", "vectorization", "optimization", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hatch",
]

[project.scripts]
numpymaxx = "numpymaxx.cli:main"

[project.urls]
Homepage = "https://github.com/ckibe-opt/numpymaxx"
Repository = "https://github.com/ckibe-opt/numpymaxx"
"Bug Tracker" = "https://github.com/ckibe-opt/numpymaxx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/numpymaxx"]
